--- a/style/style-critical.css
+++ b/style/style-critical.css
@@ -199,7 +199,7 @@
 		background-size: cover;
 	}
 	.any__obscure::before {
-		background-image: linear-gradient(to bottom right, hsl(var(--background)) 1px, transparent 0);
+		background-image: linear-gradient(to bottom right, hsla(var(--background), 1) 1px, hsla(var(--background), 0) 0);
 		background-size: 3px 3px;
 		bottom: 0;
 		content: "";
@@ -211,7 +211,7 @@
 	.any__obscure--fade::before {
 		background-image:
 			linear-gradient(to bottom, hsla(var(background--faint), 0.75), hsl(var(--background--secondary))),
-			linear-gradient(to bottom right, hsl(var(--background)) 1px, transparent 0);
+			linear-gradient(to bottom right, hsla(var(--background), 1) 1px, hsla(var(--background), 0));
 		background-size: 100% 100%, 3px 3px;
 	}
 	.any__obscure--faint::before {
